# hive

./: .editorconfig  .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  OPERATIONS.md  PRE-HARDWARE-VALIDATION.md  PRE-RELEASE-CHECKLIST.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  flake.nix  go.mod  go.sum  hive-product-vision.md  hive-technical-requirements.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  rootfs.yml
cmd/hive-agent/: main.go
cmd/hive-sidecar/: main.go  reaper_linux.go  reaper_other.go
cmd/hivectl/: agents.go  capabilities.go  client.go  color.go  completion.go  connect.go  dashboard.go  dev.go  doctor.go  doctor_mem_darwin.go  doctor_mem_linux.go  doctor_mem_other.go  exec.go  firmware.go  init.go  logs.go  main.go  messages.go  nodes.go  status.go  teams.go  tokens.go  trigger.go  users.go
cmd/hived/: ctl_handlers.go  main.go
demo/: README.md  cluster.yaml
deploy/grafana/: hive-dashboard.json
deploy/prometheus/: prometheus.yml
deploy/systemd/: hive-setup.sh  hived.service
docs/: 00-VISION-AND-PHASES.md  01-ARCHITECTURE.md  02-SCHEMAS.md  03-COMMUNICATION.md  04-CONTROL-PLANE.md  05-EXECUTION.md  06-FIRMWARE.md  07-CLI-AND-INTERACTION.md  08-DEPLOYMENT.md  09-ROADMAP.md  README.md  api-reference.md  architecture.md  cli-reference.md  communication.md  control-plane.md  deployment-guide.md  deployment.md  execution.md  firmware.md  getting-started.md  macos-support-plan.md  operations.md  quickstart.md  schemas.md  testing.md  threat-model.md
docs/internal/: hive-implementation-guide.md
images/rpi/: build.sh  install.sh
internal/auth/: auth.go  auth_test.go  fuzz_test.go
internal/backend/: backend.go  backend_test.go  manager.go  registry.go  sysmem.go  sysmem_darwin.go  sysmem_linux.go  sysmem_other.go
internal/capability/: crossteam.go  crossteam_test.go  router.go  router_test.go  toolgen.go
internal/cluster/: cluster.go  cluster_test.go
internal/config/: fuzz_test.go  loader.go  loader_test.go  validate.go  validate_test.go
internal/crossteam/: router.go  router_test.go
internal/dashboard/: api.go  api_test.go  embed.go
internal/director/: director.go
internal/events/: events_test.go  publisher.go  types.go
internal/firmware/: build.go  build_test.go  flash.go  ota.go  ota_test.go  tracker.go  tracker_test.go
internal/health/: monitor.go  monitor_test.go  restart.go  restart_test.go
internal/logging/: level.go
internal/logs/: aggregator.go  aggregator_test.go
internal/metrics/: metrics.go  metrics_test.go
internal/mqtt/: bridge.go  bridge_test.go
internal/nats/: server.go  server_test.go
internal/node/: registry.go  registry_test.go
internal/ota/: ota.go  ota_test.go
internal/production/: hardening.go  hardening_test.go  process.go  process_linux.go  process_other.go  sysresources_linux.go  sysresources_other.go
internal/protocol/: subjects.go  types.go
internal/reconciler/: reconciler.go  reconciler_test.go
internal/scheduler/: scheduler.go  scheduler_bench_test.go  scheduler_test.go
internal/secrets/: store.go  store_test.go
internal/sidecar/: broadcast.go  health.go  nats.go  runtime.go  sidecar.go  (+3 more)
nix/: module.nix
rootfs/: Makefile  build-rootfs-openclaw.sh  build-rootfs.sh
scripts/: audit.sh  demo.sh  install.sh
sdk/firmware-c/: CMakeLists.txt  README.md
sdk/firmware-c/examples/esp32-sensor/: main.c
sdk/firmware-c/include/: hive.h
sdk/firmware-c/src/: hive.c
sdk/python/: README.md  hive_sdk.py  pyproject.toml  test_hive_sdk.py
sdk/python/hive_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+121 files in other folders)
