[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hive-sdk"
version = "0.1.0"
description = "Python SDK for building Hive agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "The Hive Authors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
# Zero external dependencies - stdlib only.
dependencies = []

[project.urls]
Homepage = "https://github.com/brmurrell3/hive"
Repository = "https://github.com/brmurrell3/hive"

[tool.setuptools]
py-modules = ["hive_sdk"]
